--- a/app/src/main/res/xml/regiones.xml
+++ b/app/src/main/res/xml/regiones.xml
@@ -2,55 +2,55 @@
 <regiones>
     <region>
         <name-region>Богородчани</name-region>
-        <sick>300</sick>
+        <sick>50</sick>
         <hospitalized>50</hospitalized>
         <dead>15</dead>
         <recoverd>100</recoverd>
         <vaccinated>20</vaccinated>
         <tested-pcr>15</tested-pcr>
         <tested-ifa>18</tested-ifa>
-        <lat>48.8091297</lat>
-        <long>24.5393031</long>
+        <lat>48.80807270</lat>
+        <long>24.5380370</long>
     </region>
     <region>
         <name-region>Верховина</name-region>
-        <sick>204</sick>
+        <sick>100</sick>
         <hospitalized>20</hospitalized>
         <dead>12</dead>
         <recoverd>60</recoverd>
         <vaccinated>20</vaccinated>
         <tested-pcr>12</tested-pcr>
         <tested-ifa>18</tested-ifa>
-        <lat>48.1551793</lat>
-        <long>24.8299817</long>
+        <lat>48.1540813</lat>
+        <long>24.8168689</long>
     </region>
     <region>
         <name-region>Галич</name-region>
-        <sick>300</sick>
+        <sick>200</sick>
         <hospitalized>20</hospitalized>
         <dead>12</dead>
         <recoverd>35</recoverd>
         <vaccinated>21</vaccinated>
         <tested-pcr>12</tested-pcr>
         <tested-ifa>18</tested-ifa>
-        <lat>49.1230535</lat>
-        <long>24.7282829</long>
+        <lat>49.1261588</lat>
+        <long>24.7352453</long>
     </region>
     <region>
         <name-region>Долина</name-region>
-        <sick>125</sick>
+        <sick>300</sick>
         <hospitalized>76</hospitalized>
         <dead>6</dead>
         <recoverd>45</recoverd>
         <vaccinated>21</vaccinated>
         <tested-pcr>12</tested-pcr>
         <tested-ifa>18</tested-ifa>
-        <lat>48.9732603</lat>
-        <long>23.9805924</long>
+        <lat>48.9759735</lat>
+        <long>23.9904739</long>
     </region>
     <region>
         <name-region>Івано-Франківськ</name-region>
-        <sick>500</sick>
+        <sick>1500</sick>
         <hospitalized>54</hospitalized>
         <dead>15</dead>
         <recoverd>32</recoverd>
@@ -62,7 +62,7 @@
     </region>
     <region>
         <name-region>Тисмениця</name-region>
-        <sick>5001</sick>
+        <sick>1000</sick>
         <hospitalized>23</hospitalized>
         <dead>19</dead>
         <recoverd>12</recoverd>
@@ -71,6 +71,102 @@
         <tested-ifa>12</tested-ifa>
         <lat>48.901473</lat>
         <long>24.8462707</long>
+    </region>
+    <region>
+        <name-region>Городенка</name-region>
+        <sick>1200</sick>
+        <hospitalized>23</hospitalized>
+        <dead>19</dead>
+        <recoverd>12</recoverd>
+        <vaccinated>34</vaccinated>
+        <tested-pcr>13</tested-pcr>
+        <tested-ifa>12</tested-ifa>
+        <lat>48.6709614</lat>
+        <long>25.4973225</long>
+    </region>
+    <region>
+        <name-region>Калуш</name-region>
+        <sick>800</sick>
+        <hospitalized>23</hospitalized>
+        <dead>19</dead>
+        <recoverd>12</recoverd>
+        <vaccinated>34</vaccinated>
+        <tested-pcr>13</tested-pcr>
+        <tested-ifa>12</tested-ifa>
+        <lat>49.0355910</lat>
+        <long>24.3817536</long>
+    </region>
+<!--    <region>-->
+<!--        <name-region>Косів</name-region>-->
+<!--        <sick>400</sick>-->
+<!--        <hospitalized>23</hospitalized>-->
+<!--        <dead>19</dead>-->
+<!--        <recoverd>12</recoverd>-->
+<!--        <vaccinated>34</vaccinated>-->
+<!--        <tested-pcr>13</tested-pcr>-->
+<!--        <tested-ifa>12</tested-ifa>-->
+<!--        <lat>48.3190415</lat>-->
+<!--        <long>25.0870493</long>-->
+<!--    </region>-->
+<!--    <region>-->
+<!--        <name-region>Надвірна</name-region>-->
+<!--        <sick>500</sick>-->
+<!--        <hospitalized>23</hospitalized>-->
+<!--        <dead>19</dead>-->
+<!--        <recoverd>12</recoverd>-->
+<!--        <vaccinated>34</vaccinated>-->
+<!--        <tested-pcr>13</tested-pcr>-->
+<!--        <tested-ifa>12</tested-ifa>-->
+<!--        <lat>48.6345141</lat>-->
+<!--        <long>24.5659465</long>-->
+<!--    </region>-->
+<!--    <region>-->
+<!--        <name-region>Рогатин</name-region>-->
+<!--        <sick>600</sick>-->
+<!--        <hospitalized>23</hospitalized>-->
+<!--        <dead>19</dead>-->
+<!--        <recoverd>12</recoverd>-->
+<!--        <vaccinated>34</vaccinated>-->
+<!--        <tested-pcr>13</tested-pcr>-->
+<!--        <tested-ifa>12</tested-ifa>-->
+<!--        <lat>49.4078781</lat>-->
+<!--        <long>24.6080759</long>-->
+<!--    </region>-->
+    <region>
+        <name-region>Рожнятів</name-region>
+        <sick>700</sick>
+        <hospitalized>23</hospitalized>
+        <dead>19</dead>
+        <recoverd>12</recoverd>
+        <vaccinated>34</vaccinated>
+        <tested-pcr>13</tested-pcr>
+        <tested-ifa>12</tested-ifa>
+        <lat>48.9385203</lat>
+        <long>24.1580356</long>
+    </region>
+    <region>
+        <name-region>Снятин</name-region>
+        <sick>600</sick>
+        <hospitalized>23</hospitalized>
+        <dead>19</dead>
+        <recoverd>12</recoverd>
+        <vaccinated>34</vaccinated>
+        <tested-pcr>13</tested-pcr>
+        <tested-ifa>12</tested-ifa>
+        <lat>48.4459273</lat>
+        <long>25.5734420</long>
+    </region>
+    <region>
+        <name-region>Тлумач</name-region>
+        <sick>40</sick>
+        <hospitalized>23</hospitalized>
+        <dead>19</dead>
+        <recoverd>12</recoverd>
+        <vaccinated>34</vaccinated>
+        <tested-pcr>13</tested-pcr>
+        <tested-ifa>12</tested-ifa>
+        <lat>48.8623652</lat>
+        <long>24.9972140</long>
     </region>
 </regiones>
 
