--- a/app/src/main/res/xml/regiones.xml
+++ b/app/src/main/res/xml/regiones.xml
@@ -96,42 +96,42 @@
         <lat>49.0355910</lat>
         <long>24.3817536</long>
     </region>
-<!--    <region>-->
-<!--        <name-region>Косів</name-region>-->
-<!--        <sick>400</sick>-->
-<!--        <hospitalized>23</hospitalized>-->
-<!--        <dead>19</dead>-->
-<!--        <recoverd>12</recoverd>-->
-<!--        <vaccinated>34</vaccinated>-->
-<!--        <tested-pcr>13</tested-pcr>-->
-<!--        <tested-ifa>12</tested-ifa>-->
-<!--        <lat>48.3190415</lat>-->
-<!--        <long>25.0870493</long>-->
-<!--    </region>-->
-<!--    <region>-->
-<!--        <name-region>Надвірна</name-region>-->
-<!--        <sick>500</sick>-->
-<!--        <hospitalized>23</hospitalized>-->
-<!--        <dead>19</dead>-->
-<!--        <recoverd>12</recoverd>-->
-<!--        <vaccinated>34</vaccinated>-->
-<!--        <tested-pcr>13</tested-pcr>-->
-<!--        <tested-ifa>12</tested-ifa>-->
-<!--        <lat>48.6345141</lat>-->
-<!--        <long>24.5659465</long>-->
-<!--    </region>-->
-<!--    <region>-->
-<!--        <name-region>Рогатин</name-region>-->
-<!--        <sick>600</sick>-->
-<!--        <hospitalized>23</hospitalized>-->
-<!--        <dead>19</dead>-->
-<!--        <recoverd>12</recoverd>-->
-<!--        <vaccinated>34</vaccinated>-->
-<!--        <tested-pcr>13</tested-pcr>-->
-<!--        <tested-ifa>12</tested-ifa>-->
-<!--        <lat>49.4078781</lat>-->
-<!--        <long>24.6080759</long>-->
-<!--    </region>-->
+    <region>
+        <name-region>Косів</name-region>
+        <sick>400</sick>
+        <hospitalized>23</hospitalized>
+        <dead>19</dead>
+        <recoverd>12</recoverd>
+        <vaccinated>34</vaccinated>
+        <tested-pcr>13</tested-pcr>
+        <tested-ifa>12</tested-ifa>
+        <lat>48.3190415</lat>
+        <long>25.0870493</long>
+    </region>
+    <region>
+        <name-region>Надвірна</name-region>
+        <sick>500</sick>
+        <hospitalized>23</hospitalized>
+        <dead>19</dead>
+        <recoverd>12</recoverd>
+        <vaccinated>34</vaccinated>
+        <tested-pcr>13</tested-pcr>
+        <tested-ifa>12</tested-ifa>
+        <lat>48.6345141</lat>
+        <long>24.5659465</long>
+    </region>
+    <region>
+        <name-region>Рогатин</name-region>
+        <sick>600</sick>
+        <hospitalized>23</hospitalized>
+        <dead>19</dead>
+        <recoverd>12</recoverd>
+        <vaccinated>34</vaccinated>
+        <tested-pcr>13</tested-pcr>
+        <tested-ifa>12</tested-ifa>
+        <lat>49.4078781</lat>
+        <long>24.6080759</long>
+    </region>
     <region>
         <name-region>Рожнятів</name-region>
         <sick>700</sick>
