--- a/app/src/main/res/xml/regiones.xml
+++ b/app/src/main/res/xml/regiones.xml
@@ -6,7 +6,7 @@
         <hospitalized>50</hospitalized>
         <dead>15</dead>
         <recoverd>100</recoverd>
-        <vaccinated>20</vaccinated>
+        <vaccinated>50</vaccinated>
         <tested-pcr>15</tested-pcr>
         <tested-ifa>18</tested-ifa>
         <lat>48.80807270</lat>
@@ -18,7 +18,7 @@
         <hospitalized>20</hospitalized>
         <dead>12</dead>
         <recoverd>60</recoverd>
-        <vaccinated>20</vaccinated>
+        <vaccinated>30</vaccinated>
         <tested-pcr>12</tested-pcr>
         <tested-ifa>18</tested-ifa>
         <lat>48.1540813</lat>
@@ -27,7 +27,7 @@
     <region>
         <name-region>Галич</name-region>
         <sick>200</sick>
-        <hospitalized>20</hospitalized>
+        <hospitalized>60</hospitalized>
         <dead>12</dead>
         <recoverd>35</recoverd>
         <vaccinated>21</vaccinated>
@@ -42,7 +42,7 @@
         <hospitalized>76</hospitalized>
         <dead>6</dead>
         <recoverd>45</recoverd>
-        <vaccinated>21</vaccinated>
+        <vaccinated>90</vaccinated>
         <tested-pcr>12</tested-pcr>
         <tested-ifa>18</tested-ifa>
         <lat>48.9759735</lat>
@@ -54,7 +54,7 @@
         <hospitalized>54</hospitalized>
         <dead>15</dead>
         <recoverd>32</recoverd>
-        <vaccinated>45</vaccinated>
+        <vaccinated>140</vaccinated>
         <tested-pcr>53</tested-pcr>
         <tested-ifa>18</tested-ifa>
         <lat>48.9228059</lat>
@@ -66,7 +66,7 @@
         <hospitalized>23</hospitalized>
         <dead>19</dead>
         <recoverd>12</recoverd>
-        <vaccinated>34</vaccinated>
+        <vaccinated>100</vaccinated>
         <tested-pcr>13</tested-pcr>
         <tested-ifa>12</tested-ifa>
         <lat>48.901473</lat>
@@ -78,7 +78,7 @@
         <hospitalized>23</hospitalized>
         <dead>19</dead>
         <recoverd>12</recoverd>
-        <vaccinated>34</vaccinated>
+        <vaccinated>40</vaccinated>
         <tested-pcr>13</tested-pcr>
         <tested-ifa>12</tested-ifa>
         <lat>48.6709614</lat>
@@ -90,7 +90,7 @@
         <hospitalized>23</hospitalized>
         <dead>19</dead>
         <recoverd>12</recoverd>
-        <vaccinated>34</vaccinated>
+        <vaccinated>120</vaccinated>
         <tested-pcr>13</tested-pcr>
         <tested-ifa>12</tested-ifa>
         <lat>49.0355910</lat>
@@ -102,7 +102,7 @@
         <hospitalized>23</hospitalized>
         <dead>19</dead>
         <recoverd>12</recoverd>
-        <vaccinated>34</vaccinated>
+        <vaccinated>80</vaccinated>
         <tested-pcr>13</tested-pcr>
         <tested-ifa>12</tested-ifa>
         <lat>48.3190415</lat>
@@ -114,7 +114,7 @@
         <hospitalized>23</hospitalized>
         <dead>19</dead>
         <recoverd>12</recoverd>
-        <vaccinated>34</vaccinated>
+        <vaccinated>65</vaccinated>
         <tested-pcr>13</tested-pcr>
         <tested-ifa>12</tested-ifa>
         <lat>48.6345141</lat>
@@ -126,7 +126,7 @@
         <hospitalized>23</hospitalized>
         <dead>19</dead>
         <recoverd>12</recoverd>
-        <vaccinated>34</vaccinated>
+        <vaccinated>40</vaccinated>
         <tested-pcr>13</tested-pcr>
         <tested-ifa>12</tested-ifa>
         <lat>49.4078781</lat>
@@ -138,7 +138,7 @@
         <hospitalized>23</hospitalized>
         <dead>19</dead>
         <recoverd>12</recoverd>
-        <vaccinated>34</vaccinated>
+        <vaccinated>90</vaccinated>
         <tested-pcr>13</tested-pcr>
         <tested-ifa>12</tested-ifa>
         <lat>48.9385203</lat>
@@ -150,7 +150,7 @@
         <hospitalized>23</hospitalized>
         <dead>19</dead>
         <recoverd>12</recoverd>
-        <vaccinated>34</vaccinated>
+        <vaccinated>80</vaccinated>
         <tested-pcr>13</tested-pcr>
         <tested-ifa>12</tested-ifa>
         <lat>48.4459273</lat>
@@ -162,11 +162,23 @@
         <hospitalized>23</hospitalized>
         <dead>19</dead>
         <recoverd>12</recoverd>
-        <vaccinated>34</vaccinated>
+        <vaccinated>50</vaccinated>
         <tested-pcr>13</tested-pcr>
         <tested-ifa>12</tested-ifa>
         <lat>48.8623652</lat>
         <long>24.9972140</long>
+    </region>
+    <region>
+        <name-region>Коломия</name-region>
+        <sick>1200</sick>
+        <hospitalized>23</hospitalized>
+        <dead>19</dead>
+        <recoverd>12</recoverd>
+        <vaccinated>75</vaccinated>
+        <tested-pcr>13</tested-pcr>
+        <tested-ifa>12</tested-ifa>
+        <lat>48.5249819</lat>
+        <long>25.0533606</long>
     </region>
 </regiones>
 
