--- a/app/src/main/res/xml/regiones_info_for_period.xml
+++ b/app/src/main/res/xml/regiones_info_for_period.xml
@@ -168,4 +168,16 @@
         <lat>48.8623652</lat>
         <long>24.9972140</long>
     </region>
+    <region>
+        <name-region>Коломия</name-region>
+        <sick>3000</sick>
+        <hospitalized>23</hospitalized>
+        <dead>19</dead>
+        <recoverd>12</recoverd>
+        <vaccinated>34</vaccinated>
+        <tested-pcr>13</tested-pcr>
+        <tested-ifa>12</tested-ifa>
+        <lat>48.5249819</lat>
+        <long>25.0533606</long>
+    </region>
 </regiones>
